--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.background .light {
+  background-color: #fff;
+}
+
+.background .dark {
+  background-color: #333;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
