--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -1,6 +1,20 @@
+.background {
+    background-color: #333;
+}
+
+.background.light {
+    background-color: #fff;
+}
+
 .container {
-    width: 80%;
-    margin-top: 5%;
-    padding: 5% 5% 5% 5%;
-    margin-left: 5%;
+    max-width: 70%;
+    margin: 0 auto;
+    padding: 2rem;
+    background-color: #333;
+    color: #fff;
+}
+
+.container.light {
+    background-color: #fff;
+    color: #333;
 }
