--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -18,3 +18,9 @@
     background-color: #fff;
     color: #333;
 }
+
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 1rem;
+}
