--- a/src/components/Characters/Character/charactercard.css
+++ b/src/components/Characters/Character/charactercard.css
@@ -5,7 +5,7 @@
     position: relative;
     background-color: #333;
     border: 5px solid #ddd;
-    height: 380px;
+    height: 390px;
 }
 
 .card.light {
@@ -34,7 +34,7 @@
 }
 
 .card-name {
-    margin: 0.5rem 0;
+    margin: 0.5rem 0.5rem;
     font-size: 1.2rem;
     font-weight: 500;
     color: #fff
