--- a/src/components/Search/searchbar.css
+++ b/src/components/Search/searchbar.css
@@ -1,25 +1,13 @@
-.search-container {
-
+.search-bar {
+    flex-grow: 1;
+    margin-right: 3rem;
 }
 
-.search-input {
-    box-sizing: border-box;
-
-    /* Auto layout */
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 16px;
-    gap: 8px;
-
-    height: 56px;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-
-    /* grey */
-
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
+.search-bar input {
+    width: 100%;
+    height: 2.5rem;
+    padding: 0 0.5rem;
+    font-size: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 0.25rem;
 }
