[WIP] Added full episodes page

--- a/src/components/Episode/EpisodeCard/episodecard.css
+++ b/src/components/Episode/EpisodeCard/episodecard.css
@@ -68,12 +68,7 @@
     color: #999;
 }
 
-.card-footer .card-location {
+.card-footer .card-date {
     text-transform: uppercase;
     letter-spacing: 0.1rem;
-}
-
-.card-footer .card-species {
-    margin-top: 0.25rem;
-    font-size: 0.9rem;
 }
